fix(TMC-1657): Fix DS drawer overflow for title container (#5477)

--- a/packages/design-system/src/components/Drawer/Primitive/PrimitiveDrawer.module.scss
+++ b/packages/design-system/src/components/Drawer/Primitive/PrimitiveDrawer.module.scss
@@ -15,7 +15,7 @@
 		flex-shrink: 0;
 		flex-basis: tokens.$coral-sizing-l;
 		font: tokens.$coral-heading-m;
-
+		flex-flow: column;
 		display: flex;
 	}
 
